--- a/main.html
+++ b/main.html
@@ -8,6 +8,38 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+		<table>
+			<thead>
+				<tr>
+					<td>Roll numbers</td>
+					<td>Names</td>
+				</tr>
+				<tbody>
+				<tr>
+				</tr>
+				<tr></tr>
+					</tbody>
+			</thead>
+		</table>
+	</div>
+	<h1>List of medias</h1>
+	<section class="list">
+		<ol>
+			<li><img src="https://picsum.photos/id/123/200/300"></li>
+			<li>
+				<video controls width="320" height="240">
+					<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+					your browser does not support this video
+				</video>
+			</li>
+			<li>
+				<audio controls>
+					<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+				</audio>
+			</li>
+		</ol>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
