--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
 		<table>
 			<thead>
 				<tr>
-					<td>Roll numbers</td>
-					<td>Names</td>
+					<th>Roll numbers</tdh
+					<th>Names</th>
 				</tr>
 				<tbody>
 				<tr>
@@ -26,7 +26,7 @@
 	<h1>List of medias</h1>
 	<section class="list">
 		<ol>
-			<li><img src="https://picsum.photos/id/123/200/300"></li>
+			<li><img src="https://picsum.photos/id/123/200/300" alt="water droplets"></li>
 			<li>
 				<video controls width="320" height="240">
 					<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
@@ -35,7 +35,7 @@
 			</li>
 			<li>
 				<audio controls>
-					<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+					<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
 				</audio>
 			</li>
 		</ol>
