--- a/main.html
+++ b/main.html
@@ -35,8 +35,10 @@
         </table>
     </div>
 
-    <!-- Ordered List with Media Items -->
+    <!-- Heading for Media List -->
     <h2>List of medias</h2>
+
+    <!-- Ordered List with Media Items -->
     <ol>
         <!-- List Item with Image -->
         <li>
