--- a/main.html
+++ b/main.html
@@ -48,15 +48,16 @@
         <li>
             <video controls width="320" height="240">
                 <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
-                Your browser does not support the video tag.
+                Your browser does not support the video element.
             </video>
         </li>
         <!-- List Item with Audio -->
         <li>
-            <audio controls>
-                <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-                Your browser does not support the audio element.
-            </audio>
+             <audio controls>
+  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio> 
         </li>
     </ol>
 
