--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
     <ol>
         <!-- List Item with Image -->
         <li>
-            <img src="https://picsum.photos/id/123/200/300" alt="water droplets">
+            <img src="https://picsum.photos/id/123/200/300" alt="Sample Image">
         </li>
         <!-- List Item with Video -->
         <li>
@@ -53,11 +53,10 @@
         </li>
         <!-- List Item with Audio -->
         <li>
-             <audio controls>
-  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
-  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio> 
+            <audio controls>
+                <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+                Your browser does not support the audio element.
+            </audio> 
         </li>
     </ol>
 
