--- a/main.html
+++ b/main.html
@@ -55,6 +55,7 @@
         <li>
             <audio controls>
                 <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+                <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio> 
         </li>
